[FIX] Fixed scripts view overflow
Fixed script name auto lower case;
Removed some logs.

--- a/ui-ngx/src/app/shared/components/simulation-helper.component.scss
+++ b/ui-ngx/src/app/shared/components/simulation-helper.component.scss
@@ -88,5 +88,5 @@
 
     text-align: center;
     font-size: 14px;
-    cursor: pointer;
+    /*cursor: pointer;*/
 }
